[project]
name = "ambra-sdk"
version = "3.22.4.0-1"
description = "Ambrahealth python SDK"
requires-python = "~=3.6"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ambrahealth",
    "ambra",
]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.24.0,<3",
    "aiohttp>=3.6.2,<4",
    "python-box>=5.1.1,<6",
    "pydicom>=2.0.0,<3",
]

[project.urls]
Homepage = "https://github.com/dicomgrid/sdk-python"
Repository = "https://github.com/dicomgrid/sdk-python"
Documentation = "https://dicomgrid.github.io/sdk-python/index.html"

[project.scripts]
bump_release_candidate = "release:bump_release_candidate"
start_release = "release:start_release"
bump_release = "release:bump_release"

[dependency-groups]
dev = [
    "pytest>=6.0.1,<7",
    "mypy>=0.782,<0.783",
    "pytest-cov>=2.10.1,<3",
    "wemake-python-styleguide>=0.14.1,<0.15",
    "dynaconf>=3.1.0,<4",
    "beautifulsoup4>=4.8.2,<5",
    "jinja2>=2.11.1,<3",
    "requests-mock>=1.8.0,<2",
    "sphinx>=3.2.1,<4",
    "tox>=3.19.0,<4",
    "tomlkit>=0.5.11,<0.6",
    "gitpython>=3.1.0,<4",
    "sphinxcontrib-spelling>=5.3.0,<6",
    "pytest-asyncio>=0.15.1,<0.16",
    "aioresponses>=0.7.2,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
